# gamepad_teleoperation

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  deps.repos  package.xml  pyproject.toml
config/: example_gamepad_teleoperation.yaml  example_joy_linux.yaml  example_logitech_f710_teleoperation.yaml  example_robotnik_pad.yaml
launch/: gamepad_teleoperation.launch.py  teleop_twist_gamepad.launch.py
