<?xml version="1.0"?>
<package format="3">
  <name>gamepad_teleoperation</name>
  <version>1.0.0</version>
  <description>Gamepad teleoperation</description>
  <maintainer email="jfrascon@eurecat.org">jfrascon</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>joy_linux</exec_depend>
  <exec_depend>robotnik_pad</exec_depend>
  <exec_depend>ros2_launch_helpers</exec_depend>
</package>
